fixed reset button to work after game is finish and fixed issue where reset button would collapse behind the game_board on small screens

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     font-size: 0;
     background: url(images/background_1.png) no-repeat center center;
     background-size: cover;
+    min-width: 320px;
 }
 
 body > * {
